log/build_2024-09-27_11-56-37/master/stderr.log
/home/pimpmobile/.local/lib/python3.8/site-packages/setuptools/dist.py:472: SetuptoolsDeprecationWarning: Invalid dash-separated options
!!

        ********************************************************************************
        Usage of dash-separated 'script-dir' will not be supported in future
        versions. Please use the underscore name 'script_dir' instead.

        This deprecation is overdue, please update your project and remove deprecated
        calls to avoid build errors in the future.

        See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for details.
        ********************************************************************************

!!
  opt = self.warn_dash_deprecation(opt, section)
  File "/home/pimpmobile/ros2_ws/install/master/lib/python3.8/site-packages/master/gstreamer_host.py", line 35
    cairo_ctx.set_source_rgba(font_color*)
                                         ^
SyntaxError: invalid syntax

